--- a/Frontend/src/nav.css
+++ b/Frontend/src/nav.css
@@ -1,12 +1,13 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    background-color: #191970;
+    border: black 1px solid;
+    background-color: white;
     color: white;
-    padding: 10px;
-    font-size: 2em;
+    padding: 5px;
+    font-size: 1em;
     align-items: center;
-    gap: 20px; 
+    gap: 5px; 
   }
 
   .nav a {
